// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DayviewSpaceComponent should match snapshot 1`] = `
<div
  id="root1"
>
  
</div>
`;

exports[`DayviewSpaceComponent should match snapshot 2`] = `
<div
  id="root1"
>
  <dayview-event />
  
  
  
</div>
`;

exports[`DayviewTimelineComponent should match snapshot 1`] = `
<div
  id="root1"
>
  
</div>
`;

exports[`DayviewTimelineComponent should match snapshot 2`] = `
<div
  id="root1"
>
  <dayview-event />
  
  
  
</div>
`;
